--- a/excersise/03 - neural networks.ipynb
+++ b/excersise/03 - neural networks.ipynb
@@ -33,14 +33,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bec31981",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "cf865ddf",
    "metadata": {},
@@ -54,11 +46,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f4b5ac1a",
-   "metadata": {},
+   "execution_count": 2,
+   "id": "3a9cdf80-9ed1-42e0-9cec-f35bd4951fb1",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def d_ReLU(x):\n",
+    "    x[x<=0] = 0\n",
+    "    x[x >0] = 1\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9e7644f7-de5f-4e1e-9005-5de62b63e2ca",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_ReLU(np.array([-1,2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f4b5ac1a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "units = 8\n",
+    "x = np.random.random((2,1))\n",
+    "W1   = np.random.random((units,2)) # umgedreht\n",
+    "W2   = np.random.random((units,units))\n",
+    "Wout = np.random.random((units,1))\n",
+    "\n",
+    "b1   = np.random.random((units,1))\n",
+    "b2   = np.random.random((units,1))\n",
+    "bout = np.random.random((1,1))\n",
+    "\n",
+    "weights = [W1, W2, Wout]\n",
+    "biases  = [b1, b2, bout]\n",
+    "\n",
+    "#def NN(x, weights, biases, num_layers=2, units=8):\n",
+    "    \n",
+    "z1 = np.matmul(W1,x) + b1\n",
+    "h1 = np.maximum(np.zeros(z1.shape),z1)\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b2ed26d6-1bbe-4f66-b56b-dd9fccf9bced",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.9700139 ],\n",
+       "       [1.54507883],\n",
+       "       [1.05780108],\n",
+       "       [1.05918348],\n",
+       "       [1.34349265],\n",
+       "       [0.63679132],\n",
+       "       [1.00873453],\n",
+       "       [1.19142978]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h1"
+   ]
   },
   {
    "cell_type": "markdown",
